@@ -1,3 +1,8 @@
+2002-05-01  Eric Blake  <ebb9@email.byu.edu>
+
+	* src/platform.cpp (SystemFopen): Add workaround for obscure bug
+	in cygwin file inode hashing.
+
 2002-04-29  Eric Blake  <ebb9@email.byu.edu>
 
 	* src/bytecode.cpp (PrintCode): Add casts for g++ 3.1 problem.
